fixed About Me section again so words wrapped

--- a/assets/css/extra1.css
+++ b/assets/css/extra1.css
@@ -130,8 +130,8 @@
 
 @media screen and (min-width: 1200px) {
   .aboutRebaList ul {
-    max-width: 1500px;
-    margin: 0 0 0 50px;
+    max-width: 1200px;
+    margin: 0 0 0 10%;
   }
 
   .aboutRebaList li {
